[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-data-privacy-impact-assessor"
version = "1.0.0"
description = "OpenEnv-compatible AI Data Privacy Impact Assessor environment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenEnv Team" }
]
keywords = ["openenv", "gdpr", "privacy", "fastapi", "ai"]
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "pydantic>=2.6,<3.0",
  "requests>=2.31,<3.0",
  "openai>=1.30,<3.0",
  "python-dotenv>=1.0,<2.0",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "tasks*"]
